fix: (edit-modal) z-index

--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -14,7 +14,7 @@
     align-items: center;
     justify-content: center;
     background-color: #2a3647;
-    z-index: 25;
+    z-index: 10;
 
     .footer {
         width: 100%;
