--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -21,6 +21,7 @@
   height: 100%;
 
   .head {
+    position: relative;
     width: 88%;
     margin: 0 48px;
     display: flex;
@@ -28,7 +29,6 @@
     align-items: center;
 
     .user-menu-wrapper {
-      display: flex;
       position: relative;
 
       .user-menu {
